# MNN_20210408

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/mnn_20210408/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/mnn_20210408/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/mnn_20210408/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
xindalib/: CMakeLists.txt  build.gradle
xindalib/MNN/: CMakeLists.txt
xindalib/src/main/cpp/: Algorithm_jni.cpp
xindalib/src/main/java/xindaface/: XDFace.java
